--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap"
       rel="stylesheet"
     />
+    <meta name="description" content="Travelling , Fun , Packages, Vacation , Tourism ">
   </head>
   <body>
     <nav class="MainNavSection">
@@ -52,7 +53,7 @@
             أن تكون شركتنا هي الخيار الأول و الأمثل للشركات و القطاع الحكومي الراغبين في الحصول علي أفضل الخدمات السياحي والسفر مع ضمان أعلي مستويات من الجودة والأحترافية.
         </h5>
       </div>
-      <img src="./imgs/full-shot-woman-travel-concept-removebg-preview.png" class="SecAboutSectionImg"></img>
+      <img src="./imgs/full-shot-woman-travel-concept-removebg-preview.png" alt="travel-concept" class="SecAboutSectionImg"></img>
     </section>
     <section class="AboutSection SecAboutSection AniPlann">
         <div class="AboutSectionText SecAboutSectionText">
