--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="imgs/logo.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="imgs/logo.webp" type="image/x-icon" />
     <title>Doeen</title>
     <link rel="stylesheet" href="style.css" />
     <script
@@ -20,13 +20,12 @@
   </head>
   <body>
     <nav class="MainNavSection">
-      <img src="imgs/logo.png" alt="Logo" />
+      <img src="imgs/logo.webp" alt="Logo" />
     </nav>
     <header class="MainHeader">
       <img
-        src="imgs/travel-concept-with-flying-luggage.png"
+        src="imgs/travel-concept-with-flying-luggage.webp"
         alt="Traver-Concept"
-        srcset=""
       />
       <div class="MainHeaderText">
         <h4>شــركــة دوين</h4>
@@ -53,7 +52,7 @@
             أن تكون شركتنا هي الخيار الأول و الأمثل للشركات و القطاع الحكومي الراغبين في الحصول علي أفضل الخدمات السياحي والسفر مع ضمان أعلي مستويات من الجودة والأحترافية.
         </h5>
       </div>
-      <img src="./imgs/full-shot-woman-travel-concept-removebg-preview.png" alt="travel-concept" class="SecAboutSectionImg"></img>
+      <img src="./imgs/full-shot-woman-travel-concept-removebg-preview.webp" alt="travel-concept" class="SecAboutSectionImg"></img>
     </section>
     <section class="AboutSection SecAboutSection AniPlann">
         <div class="AboutSectionText SecAboutSectionText">
@@ -121,7 +120,7 @@
   <div class="GreenBar"></div>
 <div dir="ltr" class="EnImgDiv">
   
-  <img class="EnImgDivImg" src="./imgs/planWorld.png" alt="planWorld">
+  <img class="EnImgDivImg" src="./imgs/planWorld.webp" alt="planWorld">
   
 </div>
 <div  id="EnterPriceActivities" class="EnterPriceActivities">
@@ -174,7 +173,7 @@
     </h4>
   </div>
   <div class="HegImgSection HegImgSection2" >
-    <img src="./imgs/kaabaBg.png" alt="kaaba">
+    <img src="./imgs/kaabaBg.webp" alt="kaaba">
   </div>
 </section>
 
@@ -200,7 +199,7 @@
     </h4>
   </div>
   <div class="HegImgSection2" >
-    <img src="./imgs/TreesWay.png" alt="TreesWay">
+    <img src="./imgs/TreesWay.webp" alt="TreesWay">
   </div>
 </section>
 
